# Pulse-Orbit

./: .gitignore  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: PORTFOLIO-DISPOSITION.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notifications.rs
src-tauri/src/commands/: history.rs  mod.rs  processes.rs  settings.rs  thresholds.rs
src-tauri/src/db/: mod.rs  writer.rs
src-tauri/src/metrics/: collector.rs  disk_io.rs  gpu.rs  m_series.rs  mod.rs  proc_net.rs  threshold_checker.rs  types.rs
src/components/: history-section.tsx  kill-modal.tsx  metric-bar.tsx  panel-tabs.tsx  sparkline-chart.tsx  threshold-editor.tsx  trend-chart.tsx
src/hooks/: use-history.ts  use-metrics.ts
src/lib/: format.ts
src/styles/: globals.css
src/types/: index.ts
src/views/: cpu-view.tsx  disk-view.tsx  memory-view.tsx  network-view.tsx  process-view.tsx  settings-view.tsx
