[package]
name = "pulse-orbit"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulse_orbit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pulse-orbit"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
