[package]
name = "pulse-orbit"
version = "1.0.0"
edition = "2021"

[lib]
name = "pulse_orbit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pulse-orbit"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
